# lib.cdp.module_a

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  main.c  pyproject.toml
src/: module_a.c  module_a.h
test_package/: CMakeLists.txt
test_package/src/: example.c
